tcpd: complete function prototypes.

This clears up at least a build issues on mysql-server
ports. While here also replace some spaces with tabs
in our headers.

PR:		42336
MFC after:	2 weeks

Former-commit-id: 25fe09f0c6ccfa4ae920d124f18498d3aebe8f65